# homehub

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  Controller.cc  Controller.h  ExteriorTempProvider.cc  ExteriorTempProvider.h  InfoWebSocketController.cc  InfoWebSocketController.h  PeripheralDevice.cc  PeripheralDevice.h  main.cc  version.h
src/filters/: DigestAuthFilter.cc  DigestAuthFilter.h
src/mail/: MAILClient.cc  SMTPClient.cc  SMTPClient.h
src/model/: Config.cc  Config.h  Measurement.cc  Measurement.h  model.db  model.json
src/views/: dashboard.csp  rules.csp
static/HomeHub/: HomeHub.html  gwd_workspace.json
static/device/: HomeHub.html
static/main/css/: index.css
